# sim-aas-middleware

./: DEVELOPER.md  LICENSE  README.md  TEST_STATS.md  coverage_baseline.txt  coverage_current.txt  coverage_final.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  tasks.md
.github/workflows/: workflow.yml
docs/: 01_getting_started.md  02_concepts.md  03_writing_a_processor.md  04_managing_data.md  05_running_jobs.md  06_identities_and_security.md  07_plugin_development.md  08_architecture.md  09_testing.md  DEVELOPER_DOCUMENTATION.md  USER_STORY_REQUIREMENTS.md  concept_keystore_and_identities.md  dev_async_patterns.md  dev_components.md  dev_logging.md  dev_overview.md  dev_plugins.md  dev_security.md  dev_testing.md  processor_descriptor.md  processor_dockerfile.md  processor_implementation.md  usage_add_remove_data_object.md  usage_build_processor_docker_image.md  usage_create_identity.md  usage_deploy_undeploy_processors.md  usage_gateway.md  usage_grant_revoke_access.md  usage_job_submission_and_monitoring.md  usage_manage_identities.md  usage_manage_processor_docker_images.md  usage_run_simaas_node.md
examples/cosim/: README.md
examples/kgraph/: README.md
saas/: meta.py  node.py  service.py
scripts/: extract_all_functions.py
simaas/: decorators.py  helpers.py  meta.py  service.py
tests/: base_testcase.py  conftest.py  test_cli.py  test_core.py  test_service_nodedb.py  test_service_rti.py
(+247 files in other folders)
